In progress: add systemd service description & config changes